static/global.css
/* ... */
.art-video-player.art-setting-show .art-settings {
    display: flex;
}
.bottomleftctxt {
    bottom: 6%;
    color: rgb(250, 243, 255);
    padding: 0;
    font-weight: bold;
    font-size: 15px;
    width: 100%;
    position: absolute;
    display: flex;
    gap: 0;
    margin-right: 0px;
}
.bottomleftc {
    bottom: 6%;
    color: rgb(250, 243, 255);
    padding: 0;
    font-weight: bold;
    font-size: 15px;
    width: 100%;
    position: absolute;
    display: block;
    gap: 0;
    margin-bottom: 80px;
}

.infoslide {
    display: flex;
    align-items: center;
    padding: 2px;
    gap: 2px;
}
.animeinfo{
    display: block;
}
.animed{
    display: block;
    margin-left: 10px;
    margin-bottom: 0px;
}
.anime{
    display: flex;
    background-color: #2e2c2c;
    border-radius: 10px;
    border: 1;
    padding: 10px;
    height: auto;
    margin: 5px;
    border-color: #d9f520;
}
.anime:hover{
    cursor: pointer;
}
.descr {
    max-width: 500px;
    line-height: var(--lh);
    --max-lines: 4;
    position: relative;
    max-height: calc(var(--lh) * var(--max-lines));
    overflow: hidden;
    font-style: italic;
    font-size: 15px;
    padding-right: 1rem;
}
.desp{
    max-width: 22rem;
        line-height: var(--lh);
        --max-lines: 4;
        position: absolute;
        max-height: calc(var(--lh) * var(--max-lines));
        overflow:hidden;
        font-style: italic;
        font-size: 15px;
        padding-right: 0;
}
.desp::before {
    position:absolute;
    content: "...";
    bottom: 0;
    right: 0;
}

.desp::after {
    content: "";
    position: absolute;
    right: 0;
    width: 0;
    height: 1rem;
    background: white;
}

.descrinfo {
    --max-lines: 5;
    max-width: 42rem;
    line-height: var(--lh);
    margin: 2rem auto;
    position: relative;
    max-height: calc(var(--lh) * var(--max-lines));
    overflow: hidden;
    padding-right: 1rem;
}

.descr::before {
    position: absolute;
    content: "...";
    bottom: 0;
    right: 0;
}

.descr::after {
    content: "";
    position: absolute;
    right: 0;
    width: 1rem;
    height: 1rem;
    background: white;
}

.descrinfo::before {
    position: absolute;
    content: "...";
    bottom: 0;
    right: 0;
}
.lazyblur{
    background-position: center;
    background-size: cover;
    margin-left: auto;
    border-radius: 5px;
    height: 100px; ;
    margin-right: auto;
}
.lazyblur {

}

.descrinfo::after {
    content: "";
    position: absolute;
    right: 0;
    width: 1rem;
    height: 1rem;
    background: white;
}

.imgslide {
    width: 100%;
    height: 500px;
    object-fit:cover;
    background-color: #221f1f;
    opacity: 0.39;
}

.epi {
    top: 0;
    text-align: center;
    bottom: 0;
    right: 0;
}
.ep{
    width: auto;
}

.eplist {}

@media only screen and (max-width : 700px) {
    .frame {
        width: 100%;
        height: 200px;
    }

    .descr {
        display: none;
    }
    .desp{
        --max-lines:2;
        margin: 0;
        max-width: 60%;
        padding: 0;
        font-style: normal;
        font-size: 10px;
    }
        .animeimg {
            height: 120px;
        }
    .epi {
        top: 0;
        margin-left: 10px;
        text-align: center;
        bottom: 0;
        right: 0;
    }
}

/* info page css  */

.title {
    text-align: center;
}

.newep{
    background-color: rgb(112, 0, 198);
    color: #ffffff;
    border-radius: 3px;
    width: auto;
    padding: 5px;
    border: 10px;
    border-color: #d9f520;
}
.reld{
    display: flex;
    gap: 2px;
    font-size: 12px;
    margin: 0;
    padding: 5px;
}
.ireld {
    display: flex;
    gap: 2px;
    font-size: 18px;
    justify-content: center;
    margin: 0;
    padding: 10px;
}
.cover {
    z-index: 9;
    width: 50%;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: auto;
    margin-top: 100px;
}
.coveriframe {
display: block;
 width: 100%;
 height: 500px;
}
.art-video-player .art-settings .art-setting-panel.art-current {
    display: flex;
}
.butep{
    background-color: rgb(112, 0, 198);
        color: #ffffff;
        border: none;
        border-color: #d9f520;
        align-items: center;
        justify-content: center;
        text-align: center;
        border-radius: 0px;
        outline: none;
        margin-left: auto;
        margin-right: auto;
        height: auto;
        width: 100%;
        padding: 10px;
    }
.art-control-volume:hover .art-volume-panel {
    opacity: 1;
    pointer-events: auto;
    transform: translateY(10px);
    transform: translateX(50px);
}
.art-video-player .art-settings .art-setting-panel .art-setting-item {
    cursor: pointer;
    transition: background-color var(--art-transition-duration) ease;
    justify-content: space-between;
    align-items: center;
    padding: 0 5px;
    display: flex;
    overflow: hidden;
}
.art-icon {
    justify-content: center;
    align-items: center;
    line-height: 1;
    display: flex;
}
.art-video-player .art-settings .art-setting-panel.art-current {
    display: flex;
}

.art-video-player .art-settings .art-setting-panel {
    flex-direction: column;
    display: none;
}
.art-control-volume .art-volume-panel {
    transform: translateX(50px);
    text-align: center;
    cursor: default;
    opacity: 0;
    pointer-events: none;
    left: 0;
    right: 0;
    bottom: var(--art-control-height);
    width: var(--art-control-height);
    height: var(--art-volume-height);
    transition: all var(--art-transition-duration) ease;
    justify-content: center;
    align-items: center;
    padding: 0 5px;
    font-size: 12px;
    display: flex;
    position: absolute;
}
.art-control-volume .art-volume-panel .art-volume-inner {
    height: 100%;
    width: 100%;
    border-radius: var(--art-border-radius);
    background-color: var(--art-widget-background);
    flex-direction: column;
    align-items: center;
    gap: 10px;
    padding: 10px 0 12px;
    display: flex;
}
/* ... */

